@@ -1,25 +1,25 @@
 class Solution {
     public int maxEvents(int[][] events) {
-        Map<Integer, List<Integer>> d = new HashMap<>();
-        int i = Integer.MAX_VALUE, j = 0;
-        for (var v : events) {
-            int s = v[0], e = v[1];
-            d.computeIfAbsent(s, k -> new ArrayList<>()).add(e);
-            i = Math.min(i, s);
-            j = Math.max(j, e);
+        Map<Integer, List<Integer>> g = new HashMap<>();
+        int l = Integer.MAX_VALUE, r = 0;
+        for (int[] event : events) {
+            int s = event[0], e = event[1];
+            g.computeIfAbsent(s, k -> new ArrayList<>()).add(e);
+            l = Math.min(l, s);
+            r = Math.max(r, e);
         }
-        PriorityQueue<Integer> q = new PriorityQueue<>();
+        PriorityQueue<Integer> pq = new PriorityQueue<>();
         int ans = 0;
-        for (int s = i; s <= j; ++s) {
-            while (!q.isEmpty() && q.peek() < s) {
-                q.poll();
+        for (int s = l; s <= r; s++) {
+            while (!pq.isEmpty() && pq.peek() < s) {
+                pq.poll();
             }
-            for (int e : d.getOrDefault(s, Collections.emptyList())) {
-                q.offer(e);
+            for (int e : g.getOrDefault(s, List.of())) {
+                pq.offer(e);
             }
-            if (!q.isEmpty()) {
-                q.poll();
-                ++ans;
+            if (!pq.isEmpty()) {
+                pq.poll();
+                ans++;
             }
         }
         return ans;
